--- a/about.html
+++ b/about.html
@@ -5,13 +5,58 @@
     <title>About Us - Tsogolani Investment</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/main.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+    <style>
+        /* ABOUT PAGE GRID STYLING */
+        .about-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 25px;
+            margin-top: 30px;
+        }
+
+        .about-card {
+            background: #ffffff;
+            padding: 20px;
+            border-radius: 12px;
+            text-align: center;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+            transition: 0.3s ease-in-out;
+        }
+
+        .about-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 16px rgba(0,0,0,0.12);
+        }
+
+        .about-card i {
+            font-size: 45px;
+            color: #0a5c36; /* Tsogolani green shade */
+            margin-bottom: 15px;
+        }
+
+        .about-card h3 {
+            margin-bottom: 10px;
+            color: #000;
+        }
+
+        .about-card p {
+            color: #444;
+            line-height: 1.6;
+        }
+
+        /* CONTENT SECTION */
+        .content h2 {
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
 
 <header>
     <h1>About Us</h1>
-    <img src="assets/images/logo.jpeg" alt="Tsogolani Logo" class="logo">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <img src="assets/images/logo.png" alt="Tsogolani Logo" class="logo">
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html" class="active">About</a>
@@ -22,26 +67,57 @@
 </header>
 
 <section class="content">
-    <h2>Our Objectives</h2>
-    <p> To provide a one-stop solution for all customers' Real Estate, Construction and Engineering needs be it an End-user, investor or developer.</p>
-    <p>We Provide Leasing, Sales and Property Mananagement Services at a very High standards.</p>
-    <h2>Vision</h2>
-    <p>To be Leaders in Real Estate, Construction and Engineering Services by exceeding customers expectations.</p>
-    <h2>Mission Statement</h2>
-    <p>Aggressively pursue business through innovation to provide exceptional customer service, Build Lifetime relationships with our customers and communities.</p>
-    <h2>Core Values</h2>
-    <p>Serving with integrity treating everyone with care Tradion of Excellence of commitment proactivelt seeking to improve quality.</p>
-    <h2>Who We Are</h2>
-    <p>Tsogolani Investment & Estate Agents is a Malawian-owned company providing professional construction, property management, and real estate services.</p>
+
+    <div class="about-grid">
+
+        <!-- OBJECTIVES -->
+        <div class="about-card">
+            <i class="fas fa-bullseye"></i>
+            <h3>Our Objectives</h3>
+            <p>To provide a one-stop solution for Real Estate, Construction, and Engineering needs—serving end-users, investors, and developers with excellence.</p>
+            <p>We deliver Leasing, Sales, and Property Management services at the highest standards.</p>
+        </div>
+
+        <!-- VISION -->
+        <div class="about-card">
+            <i class="fas fa-eye"></i>
+            <h3>Vision</h3>
+            <p>To be leaders in Real Estate, Construction, and Engineering by consistently exceeding customer expectations with quality and innovation.</p>
+        </div>
+
+        <!-- MISSION -->
+        <div class="about-card">
+            <i class="fas fa-flag-checkered"></i>
+            <h3>Mission Statement</h3>
+            <p>To proactively pursue business through innovation, provide exceptional customer service, and build lifelong relationships with our clients and communities.</p>
+        </div>
+
+        <!-- CORE VALUES -->
+        <div class="about-card">
+            <i class="fas fa-handshake"></i>
+            <h3>Core Values</h3>
+            <p>Integrity, care for all, excellence, professionalism, and continuous improvement in the quality of our services.</p>
+        </div>
+
+        <!-- WHO WE ARE -->
+        <div class="about-card">
+            <i class="fas fa-building"></i>
+            <h3>Who We Are</h3>
+            <p>Tsogolani Investment & Estate Agents is a Malawian-owned company specializing in construction, property management, and real estate services with a focus on professionalism and quality delivery.</p>
+        </div>
+
+    </div>
+
 </section>
 
 <footer>
     <p>© 2025 Tsogolani Investment & Estate Agents</p>
     <p>Follow us: 
-        <a href="https://www.facebook.com/https://https://www.facebook.com/lingafmonline?mibextid=rS40aB7S9Ucbxw6v" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/YourPage" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/YourProfile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
     </p>
 </footer>
+
 </body>
 </html>
