--- a/index.html
+++ b/index.html
@@ -4,15 +4,37 @@
     <meta charset="UTF-8">
     <title>Tsogolani Investment & Estate Agents</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/main.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <style>
+        body { font-family: Arial, sans-serif; margin:0; background:#f5f5f5; }
+        header { background:#003366; color:white; padding:20px; display:flex; align-items:center; justify-content:space-between; }
+        header .logo-container { display:flex; align-items:center; gap:10px; }
+        header .logo { height:50px; }
+        nav a { color:white; margin:0 10px; text-decoration:none; font-weight:bold; }
+        nav a.active { text-decoration: underline; }
+        
+        /* Hero slider */
+        .hero { width:100%; height:500px; position:relative; margin-bottom:40px; }
+        .swiper { width:100%; height:100%; }
+        .swiper-slide { position:relative; text-align:center; color:white; display:flex; justify-content:center; align-items:center; font-size:2rem; background-size:cover; background-position:center; }
+        .hero-btn { position:absolute; bottom:50px; left:50%; transform:translateX(-50%); padding:15px 30px; background:#003366; color:white; text-decoration:none; font-weight:bold; border-radius:8px; transition:0.3s; }
+        .hero-btn:hover { background:#0055aa; }
+
+        .features { display:flex; justify-content:space-around; text-align:center; padding:40px 5%; gap:20px; }
+        .features div { background:white; padding:20px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.1); flex:1; }
+
+        footer { background:#003366; color:white; text-align:center; padding:20px; margin-top:40px; }
+        footer a { color:white; margin:0 5px; }
+    </style>
 </head>
 <body>
 
 <header>
-        <div class="logo-container">
-            <img src="assets/images/logo.jpeg" alt="Tsogolani Logo" class="logo">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <h1>Tsogolani Investment & Estate Agents</h1>
+    <div class="logo-container">
+        <img src="assets/images/logo.png" alt="Tsogolani Logo" class="logo">
+        <h1>Tsogolani Investment & Estate Agents</h1>
+    </div>
     <nav>
         <a href="index.html" class="active">Home</a>
         <a href="about.html">About</a>
@@ -22,10 +44,26 @@
     </nav>
 </header>
 
+<!-- HERO SLIDER -->
 <section class="hero">
-    <h2>Building Malawi’s Future, One Project at a Time</h2>
-    <p>Expert Construction, Real Estate, and Investment Solutions</p>
-    <a href="services.html" class="btn">Explore Services</a>
+    <div class="swiper hero-swiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide" style="background-image:url('assets/images/office.jpg');">
+                <a href="services.html" class="hero-btn">Explore Services</a>
+            </div>
+            <div class="swiper-slide" style="background-image:url('assets/images/hero.png');">
+                <a href="services.html" class="hero-btn">Explore Services</a>
+            </div>
+            <div class="swiper-slide" style="background-image:url('assets/images/residential.jpg');">
+                <a href="services.html" class="hero-btn">Explore Services</a>
+            </div>
+        </div>
+        <!-- Pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Navigation buttons -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+    </div>
 </section>
 
 <section class="features">
@@ -46,13 +84,23 @@
 <footer>
     <p>© 2025 Tsogolani Investment & Estate Agents</p>
     <p>Follow us: 
-        <a href="https://www.facebook.com/https:/https://www.facebook.com/lingafmonline?mibextid=rS40aB7S9Ucbxw6v" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/YourPage" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/YourProfile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
     </p>
 </footer>
 
-
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+    const swiper = new Swiper('.hero-swiper', {
+        loop: true,
+        autoplay: { delay: 4000, disableOnInteraction: false },
+        pagination: { el: '.swiper-pagination', clickable: true },
+        navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
+        effect: 'fade',
+        fadeEffect: { crossFade: true },
+    });
+</script>
 
 </body>
 </html>
