--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <title>Projects - Tsogolani Investment</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/main.js" defer></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <header>
-    <h1>Our Projects</h1>
-    <img src="assets/images/logo.jpeg" alt="Tsogolani Logo" class="logo">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <img src="assets/images/logo.png" alt="Tsogolani Logo" class="logo">
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -21,39 +19,129 @@
     </nav>
 </header>
 
-<section class="content">
-    <h2>Completed & Ongoing Projects</h2>
+<section class="projects-section">
+    <h2>Our Projects</h2>
 
-    <div class="project">
-        <img src="assets/images/residential.jpg" alt="Residential Project">
-        <h3>Residential Housing Project</h3>
-        <p>Modern 3-bedroom homes completed in Lilongwe Area 25.</p>
+    <div class="projects-grid">
+        <!-- Completed Project -->
+        <div class="project">
+            <img src="assets/images/residential.jpg" alt="Residential Project">
+            <div class="project-info">
+                <h3>Residential Housing Project</h3>
+                <p>Modern 3-bedroom homes completed in Lilongwe Area 25.</p>
+                <span class="status completed">Completed</span>
+            </div>
+        </div>
+
+        <!-- Ongoing Project with Modal -->
+        <div class="project" data-project="office">
+            <img src="assets/images/office.jpg" alt="Commercial Office Project">
+            <div class="project-info">
+                <h3>Commercial Office Complex</h3>
+                <p>Ongoing construction in Area 49 with modern facilities.</p>
+                <span class="status ongoing">Ongoing</span>
+            </div>
+        </div>
+
+        <!-- Future Project with Modal -->
+        <div class="project" data-project="park">
+            <img src="assets/images/park.jpg" alt="Community Park">
+            <div class="project-info">
+                <h3>Community Park Development</h3>
+                <p>Future project aimed at improving green spaces in the city.</p>
+                <span class="status future">Future</span>
+            </div>
+        </div>
+
+        <!-- Additional projects -->
+        <div class="project" data-project="mall">
+            <img src="assets/images/mall.jpg" alt="Shopping Mall">
+            <div class="project-info">
+                <h3>Shopping Mall Renovation</h3>
+                <p>Revamping the Lilongwe City Mall with modern interiors.</p>
+                <span class="status ongoing">Ongoing</span>
+            </div>
+        </div>
+
+        <div class="project">
+            <img src="assets/images/apartment.jpg" alt="Apartment Complex">
+            <div class="project-info">
+                <h3>Luxury Apartment Complex</h3>
+                <p>Completed premium apartments in Area 47.</p>
+                <span class="status completed">Completed</span>
+            </div>
+        </div>
     </div>
 
-    <div class="project">
-        <img src="assets/images/office.jpg" alt="Commercial Office Project">
-        <h3>Commercial Office Complex</h3>
-        <p>Ongoing construction in Area 49 with modern facilities.</p>
-    </div>
-
-    <div class="project">
-        <img src="assets/images/land.jpg" alt="Land Development">
-        <h3>Land Development & Sales</h3>
-        <p>Managed multiple land sales and property development programs across Lilongwe and Salima.</p>
+    <!-- See More Projects Button -->
+    <div class="see-more-container">
+        <a href="more-projects.html" class="see-more">
+            See More Projects <i class="fas fa-arrow-right"></i>
+        </a>
     </div>
 </section>
 
+<!-- Modals for Ongoing & Future Projects -->
+<div id="modal-office" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h3>Commercial Office Complex</h3>
+        <p>Construction started in January 2025, expected completion in December 2025. Features modern offices, parking space, and eco-friendly design.</p>
+    </div>
+</div>
+
+<div id="modal-park" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h3>Community Park Development</h3>
+        <p>Planned project to create a 5-acre public park with playgrounds, walking trails, and community gardens. Expected start: July 2026.</p>
+    </div>
+</div>
+
+<div id="modal-mall" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h3>Shopping Mall Renovation</h3>
+        <p>Ongoing renovation of Lilongwe City Mall including modern interiors, retail expansions, and sustainable energy solutions.</p>
+    </div>
+</div>
 
 <footer>
     <p>© 2025 Tsogolani Investment & Estate Agents</p>
     <p>Follow us: 
-        <a href="https://www.facebook.com/https://https://www.facebook.com/lingafmonline?mibextid=rS40aB7S9Ucbxw6v" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/YourPage" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/YourProfile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
     </p>
 </footer>
 
+<!-- JavaScript for Modals -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    const projects = document.querySelectorAll(".project[data-project]");
+    
+    projects.forEach(project => {
+        project.addEventListener("click", () => {
+            const projectId = project.getAttribute("data-project");
+            const modal = document.getElementById(`modal-${projectId}`);
+            if(modal) modal.style.display = "block";
+        });
+    });
 
+    const closes = document.querySelectorAll(".close");
+    closes.forEach(btn => {
+        btn.addEventListener("click", () => {
+            btn.closest(".modal").style.display = "none";
+        });
+    });
+
+    window.addEventListener("click", e => {
+        if(e.target.classList.contains("modal")) {
+            e.target.style.display = "none";
+        }
+    });
+});
+</script>
 
 </body>
 </html>
